# nirmanmitr

./: .env.example  .gitignore  Makefile  README.md  analyze_dsr.py  docker-compose.yml
backend/: Dockerfile  pyproject.toml  scratch_read.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: admin.py  ai.py  dsr.py  health.py  parse.py  projects.py  search.py  upload.py
backend/app/models/: __init__.py  base.py  dsr_item.py  parsed_item.py  project.py  user_activity.py
backend/app/parser/: __init__.py  base.py  csv_parser.py  dsr_detector.py  excel_parser.py  factory.py  normalizer.py  pdf_parser.py
backend/app/repositories/: __init__.py  base.py  dsr_repository.py  parsed_item_repository.py  project_repository.py
backend/app/schemas/: __init__.py  dsr.py  project.py
backend/app/services/: __init__.py  ai_service.py  dsr_service.py  parse_service.py  project_service.py  upload_service.py
backend/app/storage/: __init__.py  base.py  local_storage.py  supabase_storage.py
backend/app/utils/: logging.py
backend/scripts/: extract_dsr.py  seed_dsr.py
backend/tests/: __init__.py  test_dsr_detector.py
frontend/: next.config.mjs  next.config.ts  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/: knowledge-card.tsx  providers.tsx  theme-provider.tsx
frontend/src/components/admin/: add-item-dialog.tsx  (+1 more)
frontend/src/lib/: api-client.ts  utils.ts
frontend/src/types/: index.ts
(+8 files in other folders)
